--- a/app/src/main/res/layout/fragment_market_list.xml
+++ b/app/src/main/res/layout/fragment_market_list.xml
@@ -11,10 +11,11 @@
 
         <TextView
             android:id="@+id/tv1"
-            android:layout_weight="1"
+            android:paddingLeft="@dimen/dp16"
+            android:layout_weight="1.5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:text="交易品种"
             android:textSize="@dimen/sp16"/>
 
@@ -25,7 +26,8 @@
             android:layout_height="match_parent"
             android:text="价格"
             android:textSize="@dimen/sp16"
-            android:gravity="center"/>
+            android:paddingRight="@dimen/dp16"
+            android:gravity="center_vertical|right"/>
 
         <TextView
             android:id="@+id/tv3"
