--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -6,6 +6,9 @@
     <dimen name="dp3">3dp</dimen>
     <dimen name="dp2">2dp</dimen>
     <dimen name="dp1">1dp</dimen>
+    <dimen name="dp6">6dp</dimen>
+    <dimen name="dp4">4dp</dimen>
+    <dimen name="dp8">8dp</dimen>
     <dimen name="dp10">10dp</dimen>
     <dimen name="dp12">12dp</dimen>
     <dimen name="dp14">14dp</dimen>
@@ -14,6 +17,7 @@
     <dimen name="dp25">25dp</dimen>
     <dimen name="dp30">30dp</dimen>
     <dimen name="dp32">32dp</dimen>
+    <dimen name="dp34">34dp</dimen>
     <dimen name="dp35">35dp</dimen>
     <dimen name="dp36">36dp</dimen>
     <dimen name="dp40">40dp</dimen>
@@ -27,13 +31,15 @@
     <dimen name="dp120">120dp</dimen>
     <dimen name="dp140">140dp</dimen>
     <dimen name="dp180">180dp</dimen>
-    <dimen name="dp6">6dp</dimen>
     <dimen name="dp43">43dp</dimen>
 
 
     <!--sp尺寸-->
+    <dimen name="sp6">6sp</dimen>
+    <dimen name="sp8">8sp</dimen>
     <dimen name="sp10">10sp</dimen>
     <dimen name="sp13">13sp</dimen>
+    <dimen name="sp14">14sp</dimen>
     <dimen name="sp16">16sp</dimen>
     <dimen name="sp12">12sp</dimen>
 
