1.新增MessageTimeAndStickSort类，可根据Collections.sort(list,new MessageTimeAndStickSort())来对消息list进行排序 2.置顶成功后不再重新请求服务器，本地进行排序置顶 3.调整行情首页部分UI

--- a/app/src/main/res/layout/item_market_currency.xml
+++ b/app/src/main/res/layout/item_market_currency.xml
@@ -73,12 +73,8 @@
 
         <TextView
             android:id="@+id/tv_degree"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp10"
-            android:paddingRight="@dimen/dp10"
-            android:paddingTop="@dimen/dp5"
-            android:paddingBottom="@dimen/dp5"
+            android:layout_width="@dimen/dp60"
+            android:layout_height="@dimen/dp20"
             android:textSize="@dimen/sp10"
             android:text="-5.01%"
             android:textColor="@color/white"
