--- a/kchartlib/src/main/res/values/colors.xml
+++ b/kchartlib/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="chart_red">#DF3536</color>
-    <color name="chart_green">#35DF7E</color>
+    <color name="chart_red">#DF041D</color>
+    <color name="chart_green">#209300</color>
 
     <color name="chart_ma5">#18CCF6</color>
     <color name="chart_ma10">#FE5EDF</color>
@@ -14,7 +14,7 @@
 
     <color name="chart_background">#202326</color>
     <color name="chart_grid_line">#353941</color>
-    <color name="chart_text">#B1B2B6</color>
+    <color name="chart_text">#7D7D7D</color>
     <color name="chart_selector">#c830343C</color>
     <color name="chart_tab_background">#30343C</color>
     <color name="chart_tab_indicator">#FF6601</color>
