--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -23,6 +23,7 @@
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp45">45dp</dimen>
     <dimen name="dp50">50dp</dimen>
+    <dimen name="dp56">56dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp66">66dp</dimen>
     <dimen name="dp80">80dp</dimen>
@@ -42,6 +43,7 @@
     <dimen name="sp14">14sp</dimen>
     <dimen name="sp16">16sp</dimen>
     <dimen name="sp12">12sp</dimen>
+    <dimen name="sp20">20sp</dimen>
 
 
     <!-- photo view -->
