--- a/app/src/main/res/layout/item_group_list.xml
+++ b/app/src/main/res/layout/item_group_list.xml
@@ -40,7 +40,7 @@
             android:ellipsize="middle"
             android:singleLine="true"
             android:textColor="@color/important_for_content"
-            android:textSize="@dimen/size_rank_number" />
+            android:textSize="@dimen/sp16" />
     </LinearLayout>
     <View
         style="@style/style_divider_horizontal"
