--- a/baseproject/src/main/res/values/colors.xml
+++ b/baseproject/src/main/res/values/colors.xml
@@ -46,4 +46,5 @@
     <color name="certification_result_hint_bg">#b34bb893</color>
     <color name="info_top">#49b691</color>
     <color name="text_color">#808080</color>
+    <color name="text_title">#323232</color>
 </resources>
