--- a/app/src/main/res/layout/item_parent_group_list.xml
+++ b/app/src/main/res/layout/item_parent_group_list.xml
@@ -9,14 +9,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp10"
+        android:visibility="invisible"
         android:src="@drawable/selector_right_or_down" />
 
     <TextView
+
         android:id="@+id/tv_parent_title"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp10"
+        android:layout_marginLeft="@dimen/dp30"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:textColor="@color/text_title"
