--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -43,6 +43,7 @@
     <dimen name="sp13">13sp</dimen>
     <dimen name="sp14">14sp</dimen>
     <dimen name="sp16">16sp</dimen>
+    <dimen name="sp18">18sp</dimen>
     <dimen name="sp12">12sp</dimen>
     <dimen name="sp20">20sp</dimen>
 
