--- a/app/src/main/res/layout/item_find_some_list.xml
+++ b/app/src/main/res/layout/item_find_some_list.xml
@@ -69,8 +69,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/spacing_mid"
-        android:paddingLeft="@dimen/spacing_mid"
+        android:paddingLeft="@dimen/dp30"
         android:paddingRight="@dimen/spacing_mid"
         android:src="@mipmap/ico_me_follow"/>
 
