1.fix小米手机一条消息两条通知的bug

--- a/app/src/main/res/layout/fragment_market_list.xml
+++ b/app/src/main/res/layout/fragment_market_list.xml
@@ -16,7 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="交易品种"
+            android:text="名称"
             android:textSize="@dimen/sp14"/>
 
         <TextView
