新增升级群余额支付以及相应的布局页面

--- a/app/src/main/res/layout/fragment_upgrade_group.xml
+++ b/app/src/main/res/layout/fragment_upgrade_group.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="@dimen/dp100"
         android:clipChildren="false">
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_upgrade_group_viewpager"
