--- a/app/src/main/res/layout/item_upgrade_group.xml
+++ b/app/src/main/res/layout/item_upgrade_group.xml
@@ -10,123 +10,22 @@
         android:id="@+id/tv_upgrade_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp20"
+        android:layout_marginTop="@dimen/dp16"
         android:gravity="center"
         android:text="@string/chat_info_upgrade"
         android:textColor="@color/text_color_black"
-        android:textSize="16sp" />
+        android:textSize="@dimen/sp16" />
 
     <TextView
         android:id="@+id/tv_upgrade_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp20"
+        android:layout_marginTop="@dimen/dp10"
         android:gravity="center"
         android:text="￥200"
         android:textColor="@color/themeColor"
-        android:textSize="20sp"
+        android:textSize="@dimen/sp20"
         android:textStyle="bold" />
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/ll_upgrade_group_advantage_01"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp20"
-        android:paddingTop="@dimen/dp20"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/group_icon"/>
-        <TextView
-            android:textColor="@color/text_color_black"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/upgrade_group_advantage_01"/>
-    </LinearLayout>
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/ll_upgrade_group_advantage_02"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp20"
-        android:paddingTop="@dimen/dp20"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/wan_vip_icon"/>
-        <TextView
-            android:textColor="@color/text_color_black"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/upgrade_group_advantage_02"/>
-    </LinearLayout>
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/ll_upgrade_group_advantage_03"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp20"
-        android:paddingTop="@dimen/dp20"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/group_icon"/>
-        <TextView
-            android:textColor="@color/text_color_black"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/upgrade_group_advantage_03"/>
-    </LinearLayout>
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/ll_upgrade_group_advantage_04"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp20"
-        android:paddingTop="@dimen/dp20"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/hot_icon"/>
-        <TextView
-            android:textColor="@color/text_color_black"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/upgrade_group_advantage_04"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/ll_upgrade_group_advantage_05"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp20"
-        android:paddingTop="@dimen/dp20"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/album_icon"/>
-        <TextView
-            android:textColor="@color/text_color_black"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/upgrade_group_advantage_05"/>
-    </LinearLayout>
     <com.zhiyicx.common.widget.NoPullRecycleView
         android:id="@+id/upgrade_group_rv"
         android:paddingTop="@dimen/dp20"
@@ -140,7 +39,7 @@
         android:id="@+id/bt_upgrade_immediately"
         android:textColor="@color/white"
         android:text="@string/upgrade_immediately"
-        android:layout_margin="@dimen/dp40"
+        android:layout_margin="@dimen/dp30"
         android:background="@color/themeColor"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp40"
