--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -14,7 +14,9 @@
     <dimen name="dp12">12dp</dimen>
     <dimen name="dp14">14dp</dimen>
     <dimen name="dp16">16dp</dimen>
+    <dimen name="dp18">18dp</dimen>
     <dimen name="dp20">20dp</dimen>
+    <dimen name="dp24">24dp</dimen>
     <dimen name="dp25">25dp</dimen>
     <dimen name="dp30">30dp</dimen>
     <dimen name="dp32">32dp</dimen>
@@ -23,22 +25,30 @@
     <dimen name="dp36">36dp</dimen>
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp45">45dp</dimen>
+    <dimen name="dp48">48dp</dimen>
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp56">56dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp66">66dp</dimen>
+    <dimen name="dp72">72dp</dimen>
     <dimen name="dp80">80dp</dimen>
     <dimen name="dp90">90dp</dimen>
     <dimen name="dp100">100dp</dimen>
     <dimen name="dp120">120dp</dimen>
+    <dimen name="dp130">130dp</dimen>
     <dimen name="dp140">140dp</dimen>
+    <dimen name="dp156">156dp</dimen>
+    <dimen name="dp160">160dp</dimen>
+    <dimen name="dp178">178dp</dimen>
     <dimen name="dp180">180dp</dimen>
+    <dimen name="dp280">280dp</dimen>
     <dimen name="dp43">43dp</dimen>
 
 
     <!--sp尺寸-->
     <dimen name="sp6">6sp</dimen>
     <dimen name="sp8">8sp</dimen>
+    <dimen name="sp9">9sp</dimen>
     <dimen name="sp10">10sp</dimen>
     <dimen name="sp13">13sp</dimen>
     <dimen name="sp14">14sp</dimen>
@@ -46,6 +56,8 @@
     <dimen name="sp18">18sp</dimen>
     <dimen name="sp12">12sp</dimen>
     <dimen name="sp20">20sp</dimen>
+    <dimen name="sp22">22sp</dimen>
+    <dimen name="sp30">30sp</dimen>
 
 
     <!-- photo view -->
