1.修改密码成功后退出重新登录 2.增加钱包管理

--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -18,6 +18,7 @@
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp24">24dp</dimen>
     <dimen name="dp25">25dp</dimen>
+    <dimen name="dp28">28dp</dimen>
     <dimen name="dp30">30dp</dimen>
     <dimen name="dp32">32dp</dimen>
     <dimen name="dp34">34dp</dimen>
@@ -29,6 +30,7 @@
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp56">56dp</dimen>
     <dimen name="dp60">60dp</dimen>
+    <dimen name="dp62">62dp</dimen>
     <dimen name="dp66">66dp</dimen>
     <dimen name="dp72">72dp</dimen>
     <dimen name="dp80">80dp</dimen>
