--- a/app/src/main/res/layout/fragment_withdraw_currency.xml
+++ b/app/src/main/res/layout/fragment_withdraw_currency.xml
@@ -30,6 +30,7 @@
             android:hint="请输入..."/>
         
         <ImageView
+            android:id="@+id/iv_address"
             android:layout_width="@dimen/dp18"
             android:layout_height="@dimen/dp18"
             android:scaleType="centerInside"
