--- a/app/src/main/res/layout/fragment_withdraw_currency.xml
+++ b/app/src/main/res/layout/fragment_withdraw_currency.xml
@@ -20,6 +20,7 @@
             android:textColor="@color/black_deep"/>
 
         <EditText
+            android:id="@+id/et_address"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
             android:textColor="@color/black_deep"/>
 
         <EditText
+            android:id="@+id/et_tag"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
