--- a/video/src/main/res/values/dimen.xml
+++ b/video/src/main/res/values/dimen.xml
@@ -43,6 +43,8 @@
     <dimen name="dp160">160dp</dimen>
     <dimen name="dp178">178dp</dimen>
     <dimen name="dp180">180dp</dimen>
+    <dimen name="dp190">190dp</dimen>
+    <dimen name="dp200">200dp</dimen>
     <dimen name="dp280">280dp</dimen>
     <dimen name="dp43">43dp</dimen>
 
